--- a/index.html
+++ b/index.html
@@ -15,15 +15,25 @@
    <div class="wrapper">
       <header class="header" id="home">
          <div class="header__container">
-            <nav class="header__nav">
-               <ul class="header__list">
-                  <li class="header__item"><a href="#home">Home</a></li>
-                  <li class="header__item"><a href="#about">About me</a></li>
-                  <li class="header__item"><a href="#skills">Skills</a></li>
-                  <li class="header__item"><a href="#portfolio">Portfolio</a></li>
-                  <li class="header__item"><a href="#contact">Contact</a></li>
-               </ul>
-            </nav>
+
+            <div class="header__menu menu">
+               <nav class="menu__nav">
+                  <ul class="menu__list">
+                     <li class="menu__item"><a href="#home" class="menu__link">Home</a></li>
+                     <li class="menu__item"><a href="#about" class="menu__link">About me</a></li>
+                     <li class="menu__item"><a href="#skills" class="menu__link">Skills</a></li>
+                     <li class="menu__item"><a href="#portfolio" class="menu__link">Portfolio</a></li>
+                     <li class="menu__item"><a href="#contact" class="menu__link">Contact</a></li>
+                  </ul>
+               </nav>
+               <div class="menu__icon">
+                  <span class="line1"></span>
+                  <span class="line2"></span>
+                  <span class="line3"></span>
+               </div>
+            </div>
+
+
             <div class="header__hero">
                <div class="header__text">
                   <h2 class="header__title title">Hello I'm Elena Tropanets</h2>
@@ -58,13 +68,13 @@
                      </div>
                   </div>
                   <div class="about__box2 box">
-                     <div class="box__text">
-                        <p>...I have spent the last six month studying hard HTML, CSS and JavaScript. Right now I'm a student at A-Level Academy, where I have made several web pages. I'm truly passionate about it.</p>
-                     </div>
                      <div class="box__image-container">
                         <div class="box__image">
                            <img class="image" src="img/about2.png" alt="Me studying hard" width="200" height="200">
                         </div>
+                     </div>
+                     <div class="box__text">
+                        <p>...I have spent the last six month studying hard HTML, CSS and JavaScript. Right now I'm a student at A-Level Academy, where I have made several web pages. I'm truly passionate about it.</p>
                      </div>
                   </div>
                   <div class="about__box3 box">
@@ -129,42 +139,30 @@
                         <span class="web__text">view project</span>
                      </div>
                   </a>
-                  <a href="#" class="portfolio__box3 web" target="_blank">
+                  <div class="portfolio__box3 web">
                      <img src="img/web3.png" alt="WebPage" width="280" height="280">
                      <div class="web__button">
                         <span class="web__text">coming soon</span>
                      </div>
-                  </a>
-                  <a href="#" class="portfolio__box4 web" target="_blank">
+                  </div>
+                  <div class="portfolio__box4 web">
                      <img src="img/web4.png" alt="WebPage" width="280" height="280">
                      <div class="web__button">
                         <span class="web__text">coming soon</span>
                      </div>
-                  </a>
-                  <a href="#" class="portfolio__box5 web" target="_blank">
+                  </div>
+                  <div class="portfolio__box5 web">
                      <img src="img/web5.png" alt="WebPage" width="280" height="280">
                      <div class="web__button">
                         <span class="web__text">coming soon</span>
                      </div>
-                  </a>
-                  <a href="#" class="portfolio__box6 web" target="_blank">
+                  </div>
+                  <div class="portfolio__box6 web">
                      <img src="img/web6.png" alt="WebPage" width="280" height="280">
                      <div class="web__button">
                         <span class="web__text">coming soon</span>
                      </div>
-                  </a>
-                  <a href="#" class="portfolio__box7 web" target="_blank">
-                     <img src="img/web7.png" alt="WebPage" width="280" height="280">
-                     <div class="web__button">
-                        <span class="web__text">coming soon</span>
-                     </div>
-                  </a>
-                  <a href="#" class="portfolio__box8 web" target="_blank">
-                     <img src="img/web8.png" alt="WebPage" width="280" height="280">
-                     <div class="web__button">
-                        <span class="web__text">coming soon</span>
-                     </div>
-                  </a>
+                  </div>
                </div>
             </section>
          </div>
@@ -184,5 +182,6 @@
          </div>
       </footer>
    </div>
+   <script src="script.js"></script>
 </body>
 </html>
