Deleted empty portfolio

--- a/index.html
+++ b/index.html
@@ -131,41 +131,11 @@
                   </div>
                   <div class="portfolio__row">
                      <a href="https://elenatrr.github.io/gocorona/" class="portfolio__box1 web" target="_blank">
-                        <img src="img/web1.jpg" alt="WebPage" width="280" height="280">
-                        <div class="web__button">
-                           <span class="web__text">view project</span>
-                        </div>
+                        <img src="img/web1.jpg" alt="WebPage">
                      </a>
                      <a href="https://elenatrr.github.io/module_portfolio/" class="portfolio__box2 web" target="_blank">
-                        <img src="img/web2.jpg" alt="WebPage" width="280" height="280">
-                        <div class="web__button">
-                           <span class="web__text">view project</span>
-                        </div>
+                        <img src="img/web2.jpg" alt="WebPage">
                      </a>
-                     <div class="portfolio__box3 web">
-                        <img src="img/web5.png" alt="WebPage" width="280" height="280">
-                        <div class="web__button">
-                           <span class="web__text">coming soon</span>
-                        </div>
-                     </div>
-                     <div class="portfolio__box4 web">
-                        <img src="img/web5.png" alt="WebPage" width="280" height="280">
-                        <div class="web__button">
-                           <span class="web__text">coming soon</span>
-                        </div>
-                     </div>
-                     <div class="portfolio__box5 web">
-                        <img src="img/web5.png" alt="WebPage" width="280" height="280">
-                        <div class="web__button">
-                           <span class="web__text">coming soon</span>
-                        </div>
-                     </div>
-                     <div class="portfolio__box6 web">
-                        <img src="img/web5.png" alt="WebPage" width="280" height="280">
-                        <div class="web__button">
-                           <span class="web__text">coming soon</span>
-                        </div>
-                     </div>
                   </div>
                </section>
             </div>
