--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <span></span>
                      </label>
                      <ul class="menu__list">
-                        <li class="menu__item"><a href="#home" class="menu__link">Home</a></li>
+                        <!--<li class="menu__item"><a href="#" class="menu__link">Play</a></li>-->
                         <li class="menu__item"><a href="#about" class="menu__link">About me</a></li>
                         <li class="menu__item"><a href="#skills" class="menu__link">Skills</a></li>
                         <li class="menu__item"><a href="#portfolio" class="menu__link">Portfolio</a></li>
@@ -43,11 +43,11 @@
                         <li class="links__item"><a class="links__text" href="https://github.com/elenatrr" target="_blank" title="GitHub">GH</a></li>
                         <li class="links__item"><a class="links__text" href="https://www.instagram.com/elena.trr/" target="_blank" title="Instagram">IG</a></li>
                         <li class="links__item"><a class="links__text" href="https://www.linkedin.com/in/elena-tropanets-b7765315a/" target="_blank" title="LinkedIn">LI</a></li>
-                        <li class="links__item"><a class="links__text" href="https://t.me/elenatrr" target="_blank" title="Telegram">TG</a></li>
-                        <li class="links__item"><a class="links__text" href="" target="_blank" title="My CV">CV</a></li>
+                        <li class="links__item"><a class="links__text" href="https://t.me/elenatrr" target="_blank" title="Telegram">tg</a></li>
+                        <li class="links__item"><a class="links__text" href="Elena_Tropanets.pdf" target="_blank" title="My CV">CV</a></li>
                      </ul>
                   </div>
-                  <div class="header__image image" style="background-image: url(img/hero.png);">
+                  <div class="header__image image" style="background-image: url(img/hero.jpg);">
                   </div>
                </div>
             </div>
@@ -130,10 +130,10 @@
                      <h3>Portfolio</h3>
                   </div>
                   <div class="portfolio__row">
-                     <a href="https://elenatrr.github.io/gocorona/" class="portfolio__box1 web" target="_blank">
+                     <a href="https://elenatrr.github.io/gocorona/" class="portfolio__box web" target="_blank">
                         <img src="img/web1.jpg" alt="WebPage">
                      </a>
-                     <a href="https://elenatrr.github.io/module_portfolio/" class="portfolio__box2 web" target="_blank">
+                     <a href="https://elenatrr.github.io/module_portfolio/" class="portfolio__box web" target="_blank">
                         <img src="img/web2.jpg" alt="WebPage">
                      </a>
                   </div>
@@ -153,7 +153,7 @@
                   <ul class="footer__links links">
                      <li class="links__item"><a class="links__text" href="https://github.com/elenatrr" target="_blank" title="GitHub">GitHub</a></li>
                      <li class="links__item"><a class="links__text" href="https://www.linkedin.com/in/elena-tropanets-b7765315a/" target="_blank" title="LinkedIn">LinkedIn</a></li>
-                     <li class="links__item"><a class="links__text" href="https://drive.google.com/file/d/11CD8iuj8Kt1Pnk81aXiNYPjz1I4bPKVn/view?usp=sharing" target="_blank" title="My CV">My CV</a></li>
+                     <li class="links__item"><a class="links__text" href="Elena_Tropanets.pdf" target="_blank" title="My CV">My CV</a></li>
                   </ul>
                </div>
             </div>
